--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
           <header class="header">
             <div class="header__logo">
-              <img src="/img/icons/cloud.svg" alt="">
+              <img src="img/icons/cloud.svg" alt="">
               <h1><a href="index.html"><span>forest</span> | best weather forecast</a></h1>
             </div>
             <div class="header__city">
