some fix for gh-pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <h1><a href="index.html"><span>forest</span> | best weather forecast</a></h1>
             </div>
             <div class="header__city">
-              <h2>Moscow</h2>
+              <h2>your city</h2>
             </div>
           </header>
           <section class="weather">
