reworked the system for determining the city

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=9fc4cfb6-8395-48ae-b053-5a80f4a5b1ff&lang=ru_RU"
+    type="text/javascript">
+    </script>
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="shortcut icon"
@@ -18,13 +21,18 @@
         <div class="container">
           <header class="header">
             <div class="header__logo">
-              <img src="img/icons/cloud.svg" alt="">
-              <h1><a href="index.html"><span>forest</span> | best weather forecast</a></h1>
+              <img src="img/icons/cloud.svg" alt="" />
+              <h1>
+                <a href="index.html"
+                  ><span>forest</span> | best weather forecast</a
+                >
+              </h1>
             </div>
             <div class="header__city">
-              <h2>your city</h2>
+              <h2></h2>
             </div>
           </header>
+
           <section class="weather">
             <div class="weather__main"></div>
             <div class="weather__descr"></div>
