added styles and current weather

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=9fc4cfb6-8395-48ae-b053-5a80f4a5b1ff&lang=ru_RU"
-    type="text/javascript">
-    </script>
+    <script
+      src="https://api-maps.yandex.ru/2.1/?apikey=9fc4cfb6-8395-48ae-b053-5a80f4a5b1ff&lang=ru_RU"
+      type="text/javascript"
+    ></script>
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="shortcut icon"
@@ -28,16 +29,29 @@
                 >
               </h1>
             </div>
-            <div class="header__city">
+            <!-- <div class="header__city">
               <h2></h2>
-            </div>
+            </div> -->
           </header>
 
           <section class="weather">
-            <div class="weather__main"></div>
-            <div class="weather__descr"></div>
+            <div class="weather__main">
+              <div class="weather__info">
+                <div class="weather__info-city"></div>
+                <div class="weather__info-date"></div>
+                <div class="weather__info-img"></div>
+                <div class="weather__info-descr"></div>
+              </div>
+              <div class="weather__deg">
+                <div class="weather__deg-current"></div>
+                <div class="weather__deg-add">
+                  <div class="weather__deg-max"></div>
+                  <div class="weather__deg-min"></div>
+                </div>
+              </div>
+            </div>
+            <div class="weather__timeline"></div>
           </section>
-          <section class="timeline"></section>
         </div>
       </section>
     </div>
