--- a/index.html
+++ b/index.html
@@ -22,35 +22,87 @@
         <div class="container">
           <header class="header">
             <div class="header__logo">
-              <img src="img/icons/cloud.svg" alt="" />
+              <img src="img/icons/umbrella.svg" alt="" />
               <h1>
                 <a href="index.html"
                   ><span>forest</span> | best weather forecast</a
                 >
               </h1>
             </div>
-            <!-- <div class="header__city">
-              <h2></h2>
-            </div> -->
           </header>
-
-          <section class="weather">
-            <div class="weather__main">
-              <div class="weather__info">
-                <div class="weather__info-city"></div>
-                <div class="weather__info-date"></div>
-                <div class="weather__info-img"></div>
-                <div class="weather__info-descr"></div>
+          <section class="app">
+            <section class="info">
+              <div class="info__date">
+                <div class="info__date-time"></div>
+                <div class="info__date-day"></div>
               </div>
-              <div class="weather__deg">
-                <div class="weather__deg-current"></div>
-                <div class="weather__deg-add">
-                  <div class="weather__deg-max"></div>
-                  <div class="weather__deg-min"></div>
+              <div class="info__location">
+                <div class="info__location-city"></div>
+                <div class="info__location-country"></div>
+              </div>
+            </section>
+            <section class="weather">
+              <div class="weather__current">
+                <div class="weather__current-info">
+                  <img src=" " class="weather__current-image" />
+                  <div class="weather__current-descr"></div>
+                </div>
+                <div class="weather__current-forecast">
+                  <div class="weather__current-day">TODAY</div>
+                  <div class="weather__current-deg"></div>
                 </div>
               </div>
-            </div>
-            <div class="weather__timeline"></div>
+              <div class="weather__next">
+                <div class="weather__item">
+                  <div class="weather__item-day"></div>
+                  <img
+                    src="/img/icons/umbrella.svg"
+                    class="weather__item-image"
+                  />
+                  <div class="weather__item-deg"></div>
+                </div>
+                <div class="weather__item">
+                  <div class="weather__item-day"></div>
+                  <img
+                    src="/img/icons/umbrella.svg"
+                    class="weather__item-image"
+                  />
+                  <div class="weather__item-deg"></div>
+                </div>
+                <div class="weather__item">
+                  <div class="weather__item-day"></div>
+                  <img
+                    src="/img/icons/umbrella.svg"
+                    class="weather__item-image"
+                  />
+                  <div class="weather__item-deg"></div>
+                </div>
+                <div class="weather__item">
+                  <div class="weather__item-day"></div>
+                  <img
+                    src="/img/icons/umbrella.svg"
+                    class="weather__item-image"
+                  />
+                  <div class="weather__item-deg"></div>
+                </div>
+                <div class="weather__item">
+                  <div class="weather__item-day"></div>
+                  <img
+                    src="/img/icons/umbrella.svg"
+                    class="weather__item-image"
+                  />
+                  <div class="weather__item-deg"></div>
+                </div>
+                <div class="weather__item">
+                  <div class="weather__item-day"></div>
+                  <img
+                    src="/img/icons/umbrella.svg"
+                    class="weather__item-image"
+                  />
+                  <div class="weather__item-deg"></div>
+                </div>
+              </div>
+            </section>
           </section>
         </div>
       </section>
