--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
               </div>
             </section>
             <section class="weather">
-              <div class="weather__current">
+              <div class="weather__current placeholder">
                 <div class="weather__current-info">
-                  <img src=" " class="weather__current-image" />
+                  <img class="weather__current-image" />
                   <div class="weather__current-descr"></div>
                 </div>
                 <div class="weather__current-forecast">
@@ -53,52 +53,34 @@
                 </div>
               </div>
               <div class="weather__next">
-                <div class="weather__item">
+                <div class="weather__item placeholder">
                   <div class="weather__item-day"></div>
-                  <img
-                    src="/img/icons/umbrella.svg"
-                    class="weather__item-image"
-                  />
+                  <img class="weather__item-image" />
                   <div class="weather__item-deg"></div>
                 </div>
-                <div class="weather__item">
+                <div class="weather__item placeholder">
                   <div class="weather__item-day"></div>
-                  <img
-                    src="/img/icons/umbrella.svg"
-                    class="weather__item-image"
-                  />
+                  <img class="weather__item-image" />
                   <div class="weather__item-deg"></div>
                 </div>
-                <div class="weather__item">
+                <div class="weather__item placeholder">
                   <div class="weather__item-day"></div>
-                  <img
-                    src="/img/icons/umbrella.svg"
-                    class="weather__item-image"
-                  />
+                  <img class="weather__item-image" />
                   <div class="weather__item-deg"></div>
                 </div>
-                <div class="weather__item">
+                <div class="weather__item placeholder">
                   <div class="weather__item-day"></div>
-                  <img
-                    src="/img/icons/umbrella.svg"
-                    class="weather__item-image"
-                  />
+                  <img class="weather__item-image" />
                   <div class="weather__item-deg"></div>
                 </div>
-                <div class="weather__item">
+                <div class="weather__item placeholder">
                   <div class="weather__item-day"></div>
-                  <img
-                    src="/img/icons/umbrella.svg"
-                    class="weather__item-image"
-                  />
+                  <img class="weather__item-image" />
                   <div class="weather__item-deg"></div>
                 </div>
-                <div class="weather__item">
+                <div class="weather__item placeholder">
                   <div class="weather__item-day"></div>
-                  <img
-                    src="/img/icons/umbrella.svg"
-                    class="weather__item-image"
-                  />
+                  <img class="weather__item-image" />
                   <div class="weather__item-deg"></div>
                 </div>
               </div>
